--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.lazy-load-image-background.blur.lazy-load-image-loaded{
+    display: block!important;
+}
