--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-.lazy-load-image-background.blur.lazy-load-image-loaded{
-    display: block!important;
+.lazy-load-image-background.blur.lazy-load-image-loaded {
+  display: block !important;
+}
+
+.list ul {
+  list-style-position: inside;
+  list-style-type: disc;
+}
+.list ol {
+  list-style-position: inside;
+  list-style-type: decimal;
 }
